[package]
name = "status-change-monitor"
version = "0.1.0"
authors = ["Jernej Sila <jernej.sila@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytebuffer = "0.2.1"
clap = { git = "https://github.com/clap-rs/clap/" }
headless_chrome = "0.9.0"
log = "0.4.8"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.51"
simplelog = "0.7.6"
ureq = "0.12.1"