[package]
name = "status-change-monitor"
version = "0.1.0"
authors = ["Jernej Sila <jernej.sila@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
formdata = "0.12.3"
headless_chrome = "0.9.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.7"
strum = "0.18"
strum_macros = "0.18"
ureq = "0.12"